<resources>
    <string name="app_name">AheadWebSoft</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title">AHEAD WEBSOFT</string>
    <string name="mainMenu">Menu</string>
    <string name="language">IND-INR-EN</string>
    <string name="userName">Laouis Gongeles</string>
    <string name="editProfile">Edit Profile</string>
    <string name="seeMore">See More</string>
    <string name="signout">Sign Out</string>
    <string name="rateus">Rate Us</string>
</resources>