<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.view.MainMenuFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/bg_Menu">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/menu"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="15dp"
                    android:text="@string/mainMenu"
                    android:textColor="@color/black"
                    android:textSize="22dp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/selectLanguage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="15dp"
                    android:background="@drawable/bg_circle_all_grey"
                    android:padding="10dp"
                    app:layout_constraintBottom_toBottomOf="@+id/menu"
                    app:layout_constraintEnd_toStartOf="@+id/constraintLayout"
                    app:layout_constraintTop_toTopOf="@+id/menu">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:id="@+id/appCompatImageView"
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:layout_marginStart="8dp"
                        android:src="@drawable/globe"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/appCompatTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:text="@string/language"
                        android:textColor="@color/black"
                        app:layout_constraintBottom_toBottomOf="@+id/appCompatImageView"
                        app:layout_constraintStart_toEndOf="@+id/appCompatImageView"
                        app:layout_constraintTop_toTopOf="@+id/appCompatImageView" />

                    <androidx.appcompat.widget.AppCompatImageView
                        android:id="@+id/appCompatImageViewArrow"
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:layout_marginStart="8dp"
                        android:src="@drawable/down"
                        app:layout_constraintBottom_toBottomOf="@+id/appCompatTextView"
                        app:layout_constraintStart_toEndOf="@+id/appCompatTextView"
                        app:layout_constraintTop_toTopOf="@+id/appCompatTextView" />
                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/constraintLayout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:background="@drawable/bg_circle_all_grey"
                    android:padding="10dp"
                    app:layout_constraintBottom_toBottomOf="@+id/selectLanguage"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/selectLanguage">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:id="@+id/appCompatImageViewSearch"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:scaleType="fitXY"
                        android:src="@drawable/round_search_24"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/profileCL"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:background="@color/white"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    app:layout_constraintEnd_toEndOf="@+id/constraintLayout"
                    app:layout_constraintStart_toStartOf="@+id/menu"
                    app:layout_constraintTop_toBottomOf="@+id/selectLanguage">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:id="@+id/appCompatImageView2"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_marginStart="12dp"
                        android:src="@mipmap/ic_launcher"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:text="@string/userName"
                        android:textColor="@color/black"
                        android:textSize="16sp"
                        android:textStyle="normal"
                        app:layout_constraintBottom_toBottomOf="@+id/appCompatImageView2"
                        app:layout_constraintStart_toEndOf="@+id/appCompatImageView2"
                        app:layout_constraintTop_toTopOf="@+id/appCompatImageView2" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="10dp"
                        android:text="@string/editProfile"
                        android:textColor="@color/blue"
                        android:textSize="16sp"
                        android:textStyle="normal"
                        app:layout_constraintBottom_toBottomOf="@+id/appCompatImageView2"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="@+id/appCompatImageView2" />
                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rvAllContent"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    app:layout_constraintEnd_toEndOf="@+id/profileCL"
                    app:layout_constraintStart_toStartOf="@+id/profileCL"
                    app:layout_constraintTop_toBottomOf="@+id/profileCL" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:background="@color/dark_grey"
                    android:text="@string/seeMore"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="22dp"
                    android:textStyle="bold"
                    android:visibility="gone"
                    app:layout_constraintEnd_toEndOf="@+id/rvAllContent"
                    app:layout_constraintStart_toStartOf="@+id/rvAllContent"
                    app:layout_constraintTop_toBottomOf="@+id/rvAllContent" />


            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.core.widget.NestedScrollView>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="0dp"
            android:layout_height="50dp"
            app:layout_constraintBottom_toTopOf="@+id/clSignOut"
            app:layout_constraintEnd_toEndOf="@+id/clSignOut"
            app:layout_constraintStart_toStartOf="@+id/clSignOut"
            app:layout_constraintHorizontal_chainStyle="packed">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/iv_rate_us"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:src="@drawable/globe"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/rate_us"
                android:layout_marginEnd="10dp" />

            <TextView
                android:id="@+id/tvRandom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="jfjkdsfds"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:layout_editor_absoluteX="157dp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/rate_us"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Rate us"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/tvRandom"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/tvRandom"
                app:layout_constraintTop_toTopOf="@+id/tvRandom" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/clSignOut"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginBottom="15dp"
            android:background="@drawable/bg_red_border"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/signout"
                android:textAlignment="center"
                android:textColor="@color/red"
                android:textSize="16dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>